--- a/Aufgaben/A02/FiktivesPortfolio.html
+++ b/Aufgaben/A02/FiktivesPortfolio.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
+<h1>Fiktives Portfolio</h1>
+
+<h2>Fotoproben</h2>
+
+
+
+
 <body>
     
 </body>
