--- a/Aufgaben/A02/FiktivesPortfolio.html
+++ b/Aufgaben/A02/FiktivesPortfolio.html
@@ -12,6 +12,22 @@
 
 <h2>Fotoproben</h2>
 
+<a href="task_material/foto/foto1_big.jpg"><img src="task_material/foto/foto1.jpg" alt="Foto1"></a>
+<img src="task_material/foto/foto2.jpg" alt="Foto2">
+<img src="task_material/foto/foto3.jpg" alt="Foto3">
+<img src="task_material/foto/foto4.jpg" alt="Foto4">
+
+<h2>Videoproben</h2>
+<video src="task_material/animation/clip1.mp4" autoplay loop></video>
+<video src="task_material/animation/clip2.mp4" autoplay loop></video>
+<video src="task_material/animation/clip3.mp4" autoplay loop></video>
+<video src="task_material/animation/clip4.mp4" autoplay loop></video>
+
+<h2>Grafikdesignproben</h2>
+<img src="task_material/grafikdesign/grafik1.jpg" alt="Grafik1">
+<img src="task_material/grafikdesign/grafik2.jpg" alt="Grafik2">
+<img src="task_material/grafikdesign/grafik3.jpg" alt="Grafik3">
+<img src="task_material/grafikdesign/grafik4.jpg" alt="Grafik4">
 
 
 
