--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -12,8 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="#">Link zu Aufgabe 2</a>
+	<a href="/Aufgaben/A02/FiktivesPortfolio.html">Link zu Aufgabe 2</a>
 	<br>
-	<a href="#">Link zu Aufgabe 1</a>
+	
 </body>
 </html>
