--- a/Aufgaben/A03/MyPortfolio.html
+++ b/Aufgaben/A03/MyPortfolio.html
@@ -12,7 +12,20 @@
 
 <h1>Cindy Nguyen Portfolio</h1>
 
+<audio src=""></audio>
 
+<br>
+<br>
+<h1>Videoportrait</h1>
+
+<video src=""></video>
+<h6>Art of silence by uniq
+    https://soundcloud.com/uniqofficial/
+    Attribution 4.0 International (CC BY 4.0)
+    <br>
+    https://creativecommons.org/licenses/by/4.0/
+    Music promoted by https://www.chosic.com/free-music/all/
+    </h6>
 <body>
     
 </body>
