ADD: HTML MyPortfolio, HTML AboutME

--- a/Aufgaben/A03/MyPortfolio.html
+++ b/Aufgaben/A03/MyPortfolio.html
@@ -10,15 +10,12 @@
     }</style>
 </head>
 
-<h1>Cindy Nguyen Portfolio</h1>
+<h1 style=" text-align: center; background-color: #4eaed2; color: #0a0a0a;;">  Cindy Nguyen Portfolio </h1>
 
-<audio src=""></audio>
+<h5 style="color: darkgreen;">Ambient Music</h5>
 
-<br>
-<br>
-<h1>Videoportrait</h1>
+<audio id="audio01" controls loop src="my_material/Audio/Art-Of-Silence_V2.mp3"> </audio>
 
-<video src=""></video>
 <h6>Art of silence by uniq
     https://soundcloud.com/uniqofficial/
     Attribution 4.0 International (CC BY 4.0)
@@ -26,6 +23,29 @@
     https://creativecommons.org/licenses/by/4.0/
     Music promoted by https://www.chosic.com/free-music/all/
     </h6>
+
+<br>
+
+<h3>Videoportrait Cindy Nguyen</h3>
+
+<video height="340" controls>
+<source src="my_material/Videos/CindyNguyen_Videoportrait_.mp4">
+</video>
+
+<br>
+<br>
+
+<h3 style="color: #000;" > Sketches </h3>
+
+<img height="400" src="my_material/Design/Erdmännchen Sketch.jpg" alt="img01">
+<br>
+<img height="400" src="my_material/Design/Hand Sketches.png" alt="img02">
+<br>
+<img height="400" src="my_material/Design/Training 02.jpg" alt="img03">
+<img height="400" src="my_material/Design/Untitled-1 03.jpg" alt="img04">
+
+
+
 <body>
     
 </body>
