ADD; PHOTOS, CONTACTME HMTL; FIXES OF CODE

--- a/Aufgaben/A03/AboutMe.html
+++ b/Aufgaben/A03/AboutMe.html
@@ -29,7 +29,10 @@
     <p style="font-size: 140%; text-align: center;"> 
       Im unterem Bereich finden Sie Links zu meinem Portfolio und weitere Kontaktdaten.</p>
 
-      
+
+    <center><h2 style="font-size: 130%;"> <a href="ContactMe.html" target="_blank"> Kontaktdaten </a></h2></center>
+    <center><h2 style="font-size: 130%;"> <a href="MyPortfolio.html" target="_blank"> Portfolio </a></h2></center>
+
     
 
 
