--- a/Aufgaben/A03/ContactMe.html
+++ b/Aufgaben/A03/ContactMe.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>*{
+        font-family:  Lato Light;
+    }</style>
 </head>
 <body>
+
+    <center><h1 style="background-color: lightblue;">How to contact me</h1></center>
+
+    <b><p style="font-size: 150%;"> E-Mail: kim.nhung.cindy.nguyen@hs-furtwangen.de or cindy.nguyen.furtwangen@gmail.com </p></b>
+    <b><p style="font-size: 150%;"> DeviantArt: www.deviantart.com/sky-dakuraito </a> </p></b>
+
     
 </body>
 </html>
