--- a/Aufgaben/A03/MyPortfolio.html
+++ b/Aufgaben/A03/MyPortfolio.html
@@ -24,13 +24,12 @@
     Music promoted by https://www.chosic.com/free-music/all/
     </h6>
 
-<br>
 
-<h3>Videoportrait Cindy Nguyen</h3>
+    <h3 style="text-align: center;">Videoportrait Cindy Nguyen</h3>
 
-<video height="340" controls>
+<center><video height="400" controls>
 <source src="my_material/Videos/CindyNguyen_Videoportrait_.mp4">
-</video>
+</video></center>
 
 <br>
 <br>
@@ -44,6 +43,14 @@
 <img height="400" src="my_material/Design/Training 02.jpg" alt="img03">
 <img height="400" src="my_material/Design/Untitled-1 03.jpg" alt="img04">
 
+<br>
+<br>
+
+<h3 style="text-align: center;"> Character Design </h3>
+
+<center><img height="400" src="my_material/Design/Kira and Raymond - Signed.png" alt="Design01"> <img height="400" src="my_material/Design/Cat.jpg" alt="Design02"></center>
+
+<center><img height="500" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03"></center>
 
 
 <body>
