--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A02/FiktivesPortfolio.html" target="_blank">Link zu Aufgabe 2</a>
+	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A02/FiktivesPortfolio.html" target="_blank" rel="noopener noreferrer">Link zu Aufgabe 2</a>
 	<br>
 	
 </body>
