--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -14,6 +14,8 @@ body {
 <body>
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A02/FiktivesPortfolio.html" target="_blank" rel="noopener noreferrer">Link zu Aufgabe 2</a>
 	<br>
-	
+	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A02/AboutMe.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 3</a>
+
+
 </body>
 </html>
