ADD: COMMENT NOTES

--- a/Aufgaben/A03/AboutMe.html
+++ b/Aufgaben/A03/AboutMe.html
@@ -16,8 +16,11 @@
     <center><h1 style=" font-size: 250%;  background-color: #f0f0f0; color: #9e9e9e;">Hey! Willkommen zu Cindys Infoseite</h1></center>
 
     <center><h2 style="font-size: 175%; background-color: #f0f0f0; color: #9e9e9e;">aspiring artist for Concept Art</h2></center>
+    <!-- Überschrift -->
 
     <br>
+
+    <!-- Zusatzinfos -->
 
     <p style="font-size: 150%; text-align: center;"> 
     Hallo! Mein Name ist Cindy Nguyen. Ich bin 21 Jahre Alt und studiere in Furtwangen Medienkonzeption. </p>
@@ -29,7 +32,7 @@
     <p style="font-size: 140%; text-align: center;"> 
       Im unterem Bereich finden Sie Links zu meinem Portfolio und weitere Kontaktdaten.</p>
 
-
+     <!-- Kontaktdaten -->
     <center><h2 style="font-size: 130%;"> <a href="ContactMe.html" target="_blank"> Kontaktdaten </a></h2></center>
     <center><h2 style="font-size: 130%;"> <a href="MyPortfolio.html" target="_blank"> Portfolio </a></h2></center>
 
