--- a/Aufgaben/A03/MyPortfolio.html
+++ b/Aufgaben/A03/MyPortfolio.html
@@ -11,8 +11,10 @@
 </head>
 
 <h1 style=" text-align: center; background-color: #4eaed2; color: #0a0a0a;;">  Cindy Nguyen Portfolio </h1>
+<!-- Überschrift -->
 
 <h5 style="color: darkgreen;">Ambient Music</h5>
+<!-- Musik -->
 
 <audio id="audio01" controls loop src="my_material/Audio/Art-Of-Silence_V2.mp3"> </audio>
 
@@ -26,6 +28,7 @@
 
 
     <h3 style="text-align: center;">Videoportrait Cindy Nguyen</h3>
+    <!-- Video -->
 
 <center><video height="400" controls>
 <source src="my_material/Videos/CindyNguyen_Videoportrait_.mp4">
@@ -35,6 +38,7 @@
 <br>
 
 <h3 style="color: #000;" > Sketches </h3>
+<!-- Sketches -->
 
 <img height="400" src="my_material/Design/Erdmännchen Sketch.jpg" alt="img01">
 <br>
@@ -47,6 +51,7 @@
 <br>
 
 <h3 style="text-align: center;"> Character Design </h3>
+<!-- Character Design -->
 
 <center><img height="400" src="my_material/Design/Kira and Raymond - Signed.png" alt="Design01"> <img height="400" src="my_material/Design/Cat.jpg" alt="Design02"></center>
 
