--- a/Aufgaben/A03/AboutMe.html
+++ b/Aufgaben/A03/AboutMe.html
@@ -15,7 +15,7 @@
 
     <center><h1 style=" font-size: 250%;  background-color: #f0f0f0; color: #9e9e9e;">Hey! Willkommen zu Cindys Infoseite</h1></center>
 
-    <center><h2 style="font-size: 175%; background-color: #f0f0f0; color: #9e9e9e;">aspiring artist for Concept Art</h2></center>
+    <center><h2 style="font-size: 175%; background-color: #f0f0f0; color: #9e9e9e;"> An aspiring artist for Concept Art</h2></center>
     <!-- Überschrift -->
 
     <br>
