--- a/Aufgaben/warm-up-exercise/html/index.html
+++ b/Aufgaben/warm-up-exercise/html/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
+    <!-- Warmup-excerise -->
+
     <h1>Warmup</h1>
+
+    <img src="../images/freiburg.png" alt=Img01"">
+    <img src="../images/furtwangen.png" alt="Img02">
+    <img src="voegel.png" alt="VogelImg">
+
+
     
 </body>
 </html>
