--- a/Aufgaben/A03/ContactMe.html
+++ b/Aufgaben/A03/ContactMe.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>*{
-        font-family:  Lato Light;
+        font-family:  Lato Light, Calibri;
     }</style>
 </head>
 <body>
