--- a/Aufgaben/A03/AboutMe.html
+++ b/Aufgaben/A03/AboutMe.html
@@ -23,7 +23,7 @@
     <!-- Zusatzinfos -->
 
     <p style="font-size: 150%; text-align: center;"> 
-    Hallo! Mein Name ist Cindy Nguyen. Ich bin 21 Jahre Alt und studiere in Furtwangen Medienkonzeption. </p>
+    Hallo! Mein Name ist Cindy Nguyen. Ich bin 21 Jahre alt und studiere in Furtwangen Medienkonzeption. </p>
 
     <p style="font-size: 145%; text-align: center;"> 
         Meine Interessen liegen in Concept Art, Character Design, Game Design, Animationen und 3D-Modellierung </p>
