FIX NAV LINKS LOL

--- a/Aufgaben/A03/ContactMe.html
+++ b/Aufgaben/A03/ContactMe.html
@@ -16,6 +16,16 @@
     <b><p style="font-size: 150%;"> E-Mail: kim.nhung.cindy.nguyen@hs-furtwangen.de or cindy.nguyen.furtwangen@gmail.com </p></b>
     <b><p style="font-size: 150%;"> DeviantArt: <a href="https://www.deviantart.com/sky-dakuraito">DeviantArt Profil</a></p></b>
     
+    <br>
+
+    <style> .Link{background-color: lightblue;} </style>
+
+    <nav>
+        <ul>
+            <li class="Link"><a href="AboutMe.html"> About me </a></li>
+            <li class="Link"><a href="MyPortfolio.html"> My Portfolio</a></li>
+        </ul>
+    </nav>
 
     
 </body>
