--- a/Aufgaben/A03/MyPortfolio.html
+++ b/Aufgaben/A03/MyPortfolio.html
@@ -10,8 +10,17 @@
     }</style>
 </head>
 
+
 <h1 style=" text-align: center; background-color: #4eaed2; color: #0a0a0a;;">  Cindy Nguyen Portfolio </h1>
 <!-- Überschrift -->
+
+<style> .Link{background-color: #4eaed2;} </style>
+<nav>
+    <ul>
+        <li class="Link"><a href="AboutMe.html"> About me </a></li>
+        <li class="Link"><a href="ContactMe.html"> Contact me</a></li>
+    </ul>
+</nav>
 
 <h5 style="color: darkgreen;">Ambient Music</h5>
 <!-- Musik -->
@@ -39,6 +48,8 @@
 
 <h3 style="color: #000;" > Sketches </h3>
 <!-- Sketches -->
+
+
 
 <img height="400" src="my_material/Design/Erdmännchen Sketch.jpg" alt="img01">
 <br>
