Add FIx from feedback

--- a/Aufgaben/A02/FiktivesPortfolio.html
+++ b/Aufgaben/A02/FiktivesPortfolio.html
@@ -18,10 +18,10 @@
 <img src="task_material/foto/foto4.jpg" alt="Foto4">
 
 <h2>Videoproben</h2>
-<video src="task_material/animation/clip1.mp4" autoplay loop></video>
-<video src="task_material/animation/clip2.mp4" autoplay loop></video>
-<video src="task_material/animation/clip3.mp4" autoplay loop></video>
-<video src="task_material/animation/clip4.mp4" autoplay loop></video>
+<video src="task_material/animation/clip1.mp4" autoplay loop muted></video>
+<video src="task_material/animation/clip2.mp4" autoplay loop muted></video>
+<video src="task_material/animation/clip3.mp4" autoplay loop muted></video>
+<video src="task_material/animation/clip4.mp4" autoplay loop muted></video>
 
 <h2>Grafikdesignproben</h2>
 <img src="task_material/grafikdesign/grafik1.jpg" alt="Grafik1">
