Add L04 - fix warm up

--- a/Aufgaben/A04/FiktivesPortfolio02.html
+++ b/Aufgaben/A04/FiktivesPortfolio02.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="FPortfolio02.css">
 </head>
 
 
-<h1>Fiktives Portfolio</h1>
+<img src="task_material/foto/foto1_big.jpg" alt="foto1_big">
 
 <h2>Fotoproben</h2>
 
