Add Files to A04

--- a/Aufgaben/A04/FiktivesPortfolio02.html
+++ b/Aufgaben/A04/FiktivesPortfolio02.html
@@ -12,7 +12,16 @@
 
 <body>
 
-    <img src="task_material/foto/foto1_big.jpg" alt="foto1_big">
+    <header>  
+        <nav>
+            <ul>
+                <li> <a href=""></a> </li>
+                <li> <a href=""></a> </li>
+            </ul>
+        </nav>
+
+        <img src="" alt="">
+    </header>
 
 <h2>Fotoproben</h2>
 
