Add: A lot of things

--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -12,8 +12,11 @@
 </head>
 
 
-<h1>  Cindy Nguyen Portfolio </h1>
+<header><h1>  Cindy Nguyen Portfolio </h1>
 <!-- Überschrift -->
+
+<img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
+
 
 <nav>
     <ul>
@@ -21,11 +24,14 @@
         <li class="link"><a href="ContactMe.html"> Contact me</a></li>
     </ul>
 </nav>
+</header>
 
-<h5>Ambient Music</h5>
-<!-- Musik -->
-
+<div id="section02" > <p class="gifInfo" > Dark Souls 3 gif by EnksTheViking - I love dark souls  </p>
+<img class="gif01" src="my_material/Gif/Dark Souls Gif Irithyll by EnksTheViking.gif" alt="Darksouls gif by EnksTheViking">
 <audio id="audio01" controls loop src="my_material/Audio/Art-Of-Silence_V2.mp3"> </audio>
+
+<h5>Ambient Music</h5> 
+<!-- Musik -->
 
 <h6>Art of silence by uniq
     https://soundcloud.com/uniqofficial/
@@ -34,16 +40,16 @@
     https://creativecommons.org/licenses/by/4.0/
     Music promoted by https://www.chosic.com/free-music/all/
     </h6>
+</div>
 
-
-    <h3>Videoportrait Cindy Nguyen</h3>
+    <h3 class="überschrift2" >Videoportrait Cindy Nguyen</h3>
     <!-- Video -->
 
 <video id="video01" controls>
 <source src="my_material/Videos/CindyNguyen_Videoportrait_.mp4">
 </video>
 
-<h3> Sketches </h3>
+<h3 class="überschrift3" > Sketches </h3>
 <!-- Sketches -->
 
 
@@ -54,12 +60,12 @@
 <img class="sketches" src="my_material/Design/Untitled-1 03.jpg" alt="img04">
 
 
-<h3 style="text-align: center;"> Character Design </h3>
+<h3 class="überschrift4" "> Character Design </h3>
 <!-- Character Design -->
 
-<img height="400" src="my_material/Design/Kira and Raymond - Signed.png" alt="Design01"> <img height="400" src="my_material/Design/Cat.jpg" alt="Design02">
-
-<img height="500" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03">
+<img class="charDesign" src="my_material/Design/Kira and Raymond - Signed.png" alt="Design01"> 
+<img class="charDesign" src="my_material/Design/Cat.jpg" alt="Design02">
+<img class="charDesign" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03">
 
 
 <body>
