Add SVG and Fix Div Centering

--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -12,8 +12,7 @@
 </head>
 
 
-<header><h1>  Cindy Nguyen Portfolio </h1>
-<!-- Überschrift -->
+<header>
 
 <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
 
@@ -42,6 +41,9 @@
     </h6>
 </div>
 
+<div class="container" ><h1>  Cindy Nguyen Portfolio </h1>
+<!-- Überschrift -->
+
     <h3 class="überschrift2" >Videoportrait Cindy Nguyen</h3>
     <!-- Video -->
 
@@ -66,7 +68,7 @@
 <img class="charDesign" src="my_material/Design/Kira and Raymond - Signed.png" alt="Design01"> 
 <img class="charDesign" src="my_material/Design/Cat.jpg" alt="Design02">
 <img class="charDesign" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03">
-
+</div>
 
 <body>
     
