--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -12,18 +12,21 @@
 </head>
 
 
-<header>
-
+<div class="navContainer" >
 <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
 
 
 <nav>
+
     <ul>
         <li class="link"><a href="AboutMe.html"> About me </a></li>
         <li class="link"><a href="ContactMe.html"> Contact me</a></li>
     </ul>
 </nav>
-</header>
+
+<img class="logo" src="my_material/Logo/Skytecc Logo.svg" alt="Skytecc Logo">
+</div>
+
 
 <div id="section02" > <p class="gifInfo" > Dark Souls 3 gif by EnksTheViking - I love dark souls  </p>
 <img class="gif01" src="my_material/Gif/Dark Souls Gif Irithyll by EnksTheViking.gif" alt="Darksouls gif by EnksTheViking">
