--- a/Aufgaben/A04/AboutMe02.html
+++ b/Aufgaben/A04/AboutMe02.html
@@ -40,8 +40,8 @@
 
     <nav>
         <ul>
-            <li class="link" ><a href="MyPortfolio.html"> MyPortfolio </a></li>
-            <li class="link" ><a href="ContactMe.html"> Contact me </a></li>
+            <li class="link" ><a href="MyPortfolio02.html"> MyPortfolio </a></li>
+            <li class="link" ><a href="ContactMe02.html"> Contact me </a></li>
         </ul>
     </nav>
      
