--- a/Aufgaben/A04/ContactMe02.html
+++ b/Aufgaben/A04/ContactMe02.html
@@ -19,8 +19,8 @@
 
     <nav>
         <ul>
-            <li class="link"><a href="MyPortfolio.html"> My Portfolio</a></li>
-            <li class="link"><a href="AboutMe.html"> About me </a></li>
+            <li class="link"><a href="MyPortfolio02.html"> My Portfolio</a></li>
+            <li class="link"><a href="AboutMe02.html"> About me </a></li>
         </ul>
     </nav>
 
