--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -19,12 +19,12 @@
 <nav>
 
     <ul>
-        <li class="link"><a href="AboutMe.html"> About me </a></li>
-        <li class="link"><a href="ContactMe.html"> Contact me</a></li>
+        <li class="link"><a href="AboutMe02.html"> About me </a></li>
+        <li class="link"><a href="ContactMe02.html"> Contact me</a></li>
     </ul>
 </nav>
 
-<img class="logo" src="my_material/Logo/Skytecc Logo.svg" alt="Skytecc Logo">
+<a href="AboutMe02.html"> <img class="logo" src="my_material/Logo/Skytecc Logo.svg" alt="Skytecc Logo" > </a>
 </div>
 
 
