Add Hotfixes - Add Picture fix of Dragon - Footer ADD

--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -12,7 +12,7 @@
 </head>
 
 
-<div class="navContainer" >
+<div>
 <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
 
 
@@ -72,6 +72,18 @@
 <img class="charDesign" src="my_material/Design/Cat.jpg" alt="Design02">
 <img class="charDesign" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03">
 </div>
+
+<footer>
+    <div class="containerFooter" >
+    <p class="copyright" >Copyright © 2022 EIA1 All rights reserved </p>
+    <p class="kontaktdaten" > EIA1 </p>
+    <p class="kontaktdaten" > Baumannstraße 7 78120 </p>
+    <p class="kontaktdaten" > 78120 Furtwangen </p>
+    <p class="kontaktdaten" > Telefon: 0176 81553650 </p>
+    <p class="kontaktdaten" > cindy.nguyen.furtwangen@gmail.com  </p>
+
+</div>
+</footer>
 
 <body>
     
