Fix Aboutme, Add Contact style css

--- a/Aufgaben/A04/AboutMe02.html
+++ b/Aufgaben/A04/AboutMe02.html
@@ -12,16 +12,20 @@
 </head>
 <body>
     
+    <div>
+    <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
+
     <nav>
         <ul>
             <li class="link" ><a href="MyPortfolio02.html"> My Portfolio </a></li>
             <li class="link" ><a href="ContactMe02.html"> Contact me </a></li>
         </ul>
     </nav>
+</div>
 
+    <div class="containerIntroduction" >
 
-
-    <h1 class="Introduction">Hey! Willkommen zu Cindys Infoseite</h1>
+    <h1>Hey! Willkommen zu Cindys Infoseite</h1>
 
     <h2> An aspiring artist for Concept Art</h2>
     <!-- Introduction -->
@@ -40,6 +44,8 @@
     <p> Im unterem Bereich finden Sie Links zu meinem Portfolio und weitere Kontaktdaten.</p>
 
     </main>
+
+</div>
     
     <div class="containerPhoto" >
         <img class="photo" src="my_material/MyPhotos/IMG_20220328_160837.jpg" alt="MyPhoto">
