--- a/Aufgaben/A04/ContactMe02.html
+++ b/Aufgaben/A04/ContactMe02.html
@@ -35,9 +35,11 @@
 
         <p>send me a request: </p>
 
-        <div>
+        <div class="containerInput" >
             <form action="">
-                <label for="name">name</label>
+                <input class="input" type="text" name="user" placeholder="Your name" >
+                <input class="input" type="text" name="e-mail" placeholder="Your e-mail" >
+                <input class="yourMessage" type="text" name="message" placeholder="Your Message">
             </form>
         </div>
     </div>
