Add fixes - Add Send button

--- a/Aufgaben/A04/ContactMe02.html
+++ b/Aufgaben/A04/ContactMe02.html
@@ -15,7 +15,8 @@
 
     <div>
     <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
-
+    
+    <div id="navBar" >
     <nav>
         <ul>
             <li class="link"><a href="MyPortfolio02.html"> My Portfolio</a></li>
@@ -24,23 +25,24 @@
         <a href="AboutMe02.html"> <img class="logo" src="my_material/Logo/Skytecc Logo.svg" alt="Skytecc Logo" > </a>
     </nav>
 </div>
+</div>
 
-        <div>
+        <div id="containerMessage" >
         <h2>Contact</h2>
 
         <p>EIA1</p>
         <p class="" > Baumannstraße 7 78120 </p>
         <p class="" > 78120 Furtwangen </p>
         <p class="" > Telefon: 0176 81553650 </p>
-
-        <p>send me a request: </p>
-
-        <div class="containerInput" >
-            <form action="">
-                <input class="input" type="text" name="user" placeholder="Your name" >
-                <input class="input" type="text" name="e-mail" placeholder="Your e-mail" >
-                <input class="yourMessage" type="text" name="message" placeholder="Your Message">
-            </form>
+        
+        <div id="message">
+            <ul>
+                <li><h2> Send me a request </h2></li>
+                <li> <input class="name" type="text" name="name" placeholder="Your name"> </li>
+                <li> <input class="email" type="text" name="e-mail" placeholder="Your E-Mail" > </li>
+                <li> <textarea class="yourmessage" name="your_message" cols="30" rows="10" placeholder="your message" > </textarea> </li>
+                <li> <input type="Send" name="send" value="Send"> </li>
+            </ul>
         </div>
     </div>
 
