Add finishing changes Contact

--- a/Aufgaben/A04/ContactMe02.html
+++ b/Aufgaben/A04/ContactMe02.html
@@ -25,6 +25,7 @@
         <a href="AboutMe02.html"> <img class="logo" src="my_material/Logo/Skytecc Logo.svg" alt="Skytecc Logo" > </a>
     </nav>
 </div>
+
 </div>
 
         <div id="containerMessage" >
@@ -40,10 +41,11 @@
                 <li><h2> Send me a request </h2></li>
                 <li> <input class="name" type="text" name="name" placeholder="Your name"> </li>
                 <li> <input class="email" type="text" name="e-mail" placeholder="Your E-Mail" > </li>
-                <li> <textarea class="yourmessage" name="your_message" cols="30" rows="10" placeholder="your message" > </textarea> </li>
-                <li> <input type="Send" name="send" value="Send"> </li>
+                <li> <textarea class="yourmessage" name="your_message" cols="30" rows="10" placeholder="Your message" ></textarea> </li>
+                <li> <input class="send" type="submit" name="send" value="Send"> </li>
             </ul>
         </div>
+
     </div>
 
 
