--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -74,22 +74,28 @@
 </div>
 
 <footer>
-    <div class="containerFooter" >
 
-        <div class="containerIcons" >
+        <div>
+            <p class="kontaktdaten" > EIA1 </p>
+            <p class="kontaktdaten" > Baumannstraße 7 78120 </p>
+            <p class="kontaktdaten" > 78120 Furtwangen </p>
+            <p class="kontaktdaten" > Telefon: 0176 81553650 </p>
+            <p class="kontaktdaten" > cindy.nguyen.furtwangen@gmail.com  </p>
+            </div>
+
+        <div>
+            <p class="icons" >Follow me</p>
             <img class="icons" src="images02/icon_insta.svg" alt="icon_insta">
             <img class="icons" src="images02/icon_linkedin.svg" alt="icon_linkedin">
             <img class="icons" src="images02/icon_youtube.svg" alt="icon_youtube">
         </div>
 
-        <div class="containerContact" >
-    <p class="copyright" >Copyright © 2022 EIA1 All rights reserved </p>
-    <p class="kontaktdaten" > EIA1 </p>
-    <p class="kontaktdaten" > Baumannstraße 7 78120 </p>
-    <p class="kontaktdaten" > 78120 Furtwangen </p>
-    <p class="kontaktdaten" > Telefon: 0176 81553650 </p>
-    <p class="kontaktdaten" > cindy.nguyen.furtwangen@gmail.com  </p>
-</div>
+    <div>
+        
+        <p class="copyright" >Copyright © 2022 EIA1 All rights reserved </p>
+
+    </div>
+
 
 </footer>
 
