--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -15,6 +15,8 @@ body {
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A02/FiktivesPortfolio.html" target="_blank" rel="noopener noreferrer">Link zu Aufgabe 2</a>
 	<br>
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A03/AboutMe.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 3</a>
+	<br>
+	<a href=https://skytecc.github.io/EIA_SoSe22/Aufgaben/A04/MyPortfolio02.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 4</a>
 
 
 </body>
