--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -20,7 +20,8 @@
 
     <ul>
         <li class="link"><a href="AboutMe02.html"> About me </a></li>
-        <li class="link"><a href="ContactMe02.html"> Contact me</a></li>
+        <li class="link"><a href="ContactMe02.html"> Contact me </a></li>
+        <li class="active" > <a href="MyPortfolio02.html"> My Portfolio </a></li>
     </ul>
 </nav>
 
