--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -16,7 +16,7 @@ body {
 	<br>
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A03/AboutMe.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 3</a>
 	<br>
-	<a href=https://skytecc.github.io/EIA_SoSe22/Aufgaben/A04/MyPortfolio02.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 4</a>
+	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A04/MyPortfolio02.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 4</a>
 
 
 </body>
