Add container to contact me - fixed 800px center of Header in Portfolio02

--- a/Aufgaben/A04/ContactMe02.html
+++ b/Aufgaben/A04/ContactMe02.html
@@ -30,6 +30,8 @@
 
 </div>
 
+        <div id="mainContainer">
+
         <div id="containerMessage" >
         <h2>Contact</h2>
 
@@ -49,6 +51,8 @@
         </div>
 
     </div>
+
+</div>
 
 
     <footer>
