--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -12,7 +12,7 @@
 </head>
 
 
-<div>
+<div id="header" >
 <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
 
 
