fix - background header

--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -13,8 +13,7 @@
 
 
 <div id="header" >
-<img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
-
+<div class="backgroundPic" > </div>
 
 <nav>
 
