--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -73,7 +73,10 @@
 <img class="charDesign" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03">
 </div>
 
+
 <footer>
+
+    <div class="container flex" >
 
         <div>
             <p class="kontaktdaten" > EIA1 </p>
@@ -83,8 +86,8 @@
             <p class="kontaktdaten" > cindy.nguyen.furtwangen@gmail.com  </p>
             </div>
 
-        <div>
-            <p class="icons" >Follow me</p>
+        <div class="containerIcons" >
+            <p>Follow me</p>
             <img class="icons" src="images02/icon_insta.svg" alt="icon_insta">
             <img class="icons" src="images02/icon_linkedin.svg" alt="icon_linkedin">
             <img class="icons" src="images02/icon_youtube.svg" alt="icon_youtube">
@@ -95,6 +98,8 @@
         <p class="copyright" >Copyright © 2022 EIA1 All rights reserved </p>
 
     </div>
+
+</div>
 
 
 </footer>
