fix all - footer - etc.

--- a/Aufgaben/A04/ContactMe02.html
+++ b/Aufgaben/A04/ContactMe02.html
@@ -17,7 +17,7 @@
 <body>
 
     <div>
-        <img class="backgroundPic" src="my_material/Design/Glow Übung.jpg" alt="Header Background">
+        <div class="backgroundPic" > </div>
 
         <div id="navBar">
             <nav>
@@ -34,7 +34,7 @@
 
     </div>
 
-    <div id="mainContainer">
+    <div class="container">
 
         <div id="containerMessage">
             <h2>Contact</h2>
