Add css to About me and Portfolio

--- a/Aufgaben/A04/AboutMe02.html
+++ b/Aufgaben/A04/AboutMe02.html
@@ -9,6 +9,7 @@
         font-family:  Lato Light, Calibri;
     }</style>
     <link rel="stylesheet" href="StyleAboutMe.css">
+    <link rel="stylesheet" href="StyleHeaderFooter.css">
 </head>
 <body>
     
