--- a/Aufgaben/A04/MyPortfolio02.html
+++ b/Aufgaben/A04/MyPortfolio02.html
@@ -9,6 +9,7 @@
         font-family: sans-serif;
     }</style>
     <link rel="stylesheet" href="StylePortfolio.css">
+    <link rel="stylesheet" href="StyleHeaderFooter.css">
 </head>
 
 
