Fix a05 Stylesheets rename

--- a/Aufgaben/A05/AboutMe03.html
+++ b/Aufgaben/A05/AboutMe03.html
@@ -8,8 +8,8 @@
     <style>*{
         font-family:  Lato Light, Calibri;
     }</style>
-    <link rel="stylesheet" href="StyleAboutMe.css">
-    <link rel="stylesheet" href="StyleHeaderFooter.css">
+    <link rel="stylesheet" href="StyleAboutMe02.css">
+    <link rel="stylesheet" href="StyleHeaderFooter02.css">
 </head>
 <body>
     
