--- a/Aufgaben/A05/ContactMe03.html
+++ b/Aufgaben/A05/ContactMe03.html
@@ -11,7 +11,7 @@
             font-family: Lato Light, Calibri;
         }
     </style>
-    <link rel="stylesheet" href="StyleContact.css">
+    <link rel="stylesheet" href="StyleContact02.css">
 </head>
 
 <body>
