--- a/Aufgaben/A05/MyPortfolio03.html
+++ b/Aufgaben/A05/MyPortfolio03.html
@@ -8,8 +8,8 @@
     <style>*{
         font-family: sans-serif;
     }</style>
-    <link rel="stylesheet" href="StylePortfolio.css">
-    <link rel="stylesheet" href="StyleHeaderFooter.css">
+    <link rel="stylesheet" href="StylePortfolio02.css">
+    <link rel="stylesheet" href="StyleHeaderFooter02.css">
 </head>
 
 
