--- a/Aufgaben/A05/MyPortfolio03.html
+++ b/Aufgaben/A05/MyPortfolio03.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>*{
-        font-family: sans-serif;
-    }</style>
+
     <link rel="stylesheet" href="StylePortfolio02.css">
     <link rel="stylesheet" href="StyleHeaderFooter02.css">
 </head>
 
 
 <div>
+
+<div id="banner" >
+
+    <div class="inhalt" >
+
+        <div> I am looking for an internship </div>
+
+    </div>
+
+</div>
+
 <div class="backgroundPic" > </div>
 
 <nav>
@@ -59,11 +68,12 @@
 <!-- Sketches -->
 
 
-
+<div class="sketchContainer" >
 <img class="sketches" src="my_material/Design/Erdmännchen Sketch.jpg" alt="img01">
 <img class="sketches" src="my_material/Design/Hand Sketches.png" alt="img02">
 <img class="sketches" src="my_material/Design/Training 02.jpg" alt="img03">
 <img class="sketches" src="my_material/Design/Untitled-1 03.jpg" alt="img04">
+</div>
 
 
 <h3 class="überschrift4" "> Character Design </h3>
@@ -72,6 +82,7 @@
 <img class="charDesign" src="my_material/Design/Kira and Raymond - Signed.png" alt="Design01"> 
 <img class="charDesign" src="my_material/Design/Cat.jpg" alt="Design02">
 <img class="charDesign" src="my_material/Design/Erwin Outfits Character Sheet - Signed.png" alt="Design03">
+
 </div>
 
 
