Add javascript rechnungen

--- a/Aufgaben/A06/eu.html
+++ b/Aufgaben/A06/eu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" ></script>
 </head>
 
@@ -156,7 +156,7 @@
     </main>
 
     <footer>
-        <p>Quelle: https://www.statista.com/</p>
+        <p>Quelle: https://countrymeters.info/</p>
     </footer>
 
 </body>
