--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -19,6 +19,8 @@ body {
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A04/MyPortfolio02.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 4</a>
     <br>
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A05/MyPortfolio03.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 5</a>
+	<br>
+	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A06/eu.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 6</a>
 
 </body>
 </html>
