ADD Functions on click changing values

--- a/Aufgaben/A07/eu02.html
+++ b/Aufgaben/A07/eu02.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="script02.js" ></script>
+    <script src="script02.js" async></script>
 </head>
 
 <body>
@@ -142,23 +142,23 @@
         </h1>
         
         <section>
-            <h2>65,48Mio</h2>
-            <p>Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
+            <h2 class="einwohnerGS" >65.88Mio</h2>
+            <p class="p1" >Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
         </section>
 
         <section>
-            <h2>14%</h2>
+            <h2 class="vglEU">15%</h2>
             <p>Relativ zur Gesamtzahl in der EU</p>
         </section>
 
         <section>
-            <h2>5,1%</h2>
-            <p>Wachstumsrate seit 2008</p>
+            <h2 class="wr2014">3%%</h2>
+            <p>Wachstumsrate seit 2014</p>
         </section>
 
         <section>
-            <h2>3,34Mio</h2>
-            <p>Wachstumsrate gesamt zwischen 2008 and 2022</p>
+            <h2 class="wrDifference">1.83Mio</h2>
+            <p>Wachstumsrate gesamt zwischen 2014 and 2022</p>
         </section>
     </main>
 
