ADD Stars - for EU Numbers

--- a/Aufgaben/A07/eu02.html
+++ b/Aufgaben/A07/eu02.html
@@ -137,7 +137,7 @@
 
         </div>
         
-        <h1>
+        <h1 class="euZahl" >
             Einwohnerzahl in der europäischen Union
         </h1>
         
@@ -152,7 +152,7 @@
         </section>
 
         <section>
-            <h2 class="wr2014">3%%</h2>
+            <h2 class="wr2014">3%</h2>
             <p>Wachstumsrate seit 2014</p>
         </section>
 
