--- a/Aufgaben/A07/eu02.html
+++ b/Aufgaben/A07/eu02.html
@@ -55,7 +55,7 @@
                 <img src="images/finland.png" height="76px" class="finland">
                 <h5>Finnland</h5>
             </div>
-            <div class="wrapper active">
+            <div class="wrapper">
                 <img src="images/france.png" height="76px" class="france">
                 <h5>Frankreich</h5>
             </div>
@@ -142,22 +142,22 @@
         </h1>
         
         <section>
-            <h2 class="einwohnerGS" >65.88Mio</h2>
-            <p class="p1" >Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
+            <h2 class="einwohnerGS" ></h2>
+            <p class="p1" >Gesamtzahl Einwohnerinnen und Einwohner</p>
         </section>
 
         <section>
-            <h2 class="vglEU">15%</h2>
+            <h2 class="vglEU"></h2>
             <p>Relativ zur Gesamtzahl in der EU</p>
         </section>
 
         <section>
-            <h2 class="wr2014">3%</h2>
+            <h2 class="wr2014"></h2>
             <p>Wachstumsrate seit 2014</p>
         </section>
 
         <section>
-            <h2 class="wrDifference">1.83Mio</h2>
+            <h2 class="wrDifference"></h2>
             <p>Wachstumsrate gesamt zwischen 2014 and 2022</p>
         </section>
     </main>
