--- a/Aufgaben/A07/eu02.html
+++ b/Aufgaben/A07/eu02.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="script02.js" async></script>
+    <script src="script02.js"></script>
 </head>
 
 <body>
