--- a/Aufgaben/A08/Drumpad.html
+++ b/Aufgaben/A08/Drumpad.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="drumPadscript.js" ></script>
 </head>
 <body> 
     
     <div class="drumpad">
 
-    <button class="button buttonR1 button01"></button>
-    <button class="button buttonR1 button02" ></button>
-    <button class="button buttonR1 button03" ></button>
-    <button class="button buttonR2 button04" ></button>
-    <button class="button buttonR2 button05" ></button>
-    <button class="button buttonR2 button06" ></button>
-    <button class="button buttonR2 button07" ></button>
-    <button class="button buttonR3 button08" ></button>
-    <button class="button buttonR3 button09" ></button>
+    <button class="button buttonR1 button1"></button>
+    <button class="button buttonR1 button2" ></button>
+    <button class="button buttonR1 button3" ></button>
+    <button class="button buttonR2 button4" ></button>
+    <button class="button buttonR2 button5" ></button>
+    <button class="button buttonR2 button6" ></button>
+    <button class="button buttonR2 button7" ></button>
+    <button class="button buttonR3 button8" ></button>
+    <button class="button buttonR3 button9" ></button>
 
 </div>
 
