--- a/Aufgaben/A07/eu02.html
+++ b/Aufgaben/A07/eu02.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="row">
-            <div class="wrapper">
+            <div id="germany" class="wrapper">
                 <img src="images/germany.png" height="76px" class="germany">
                 <h5>Deutschland</h5>
             </div>
@@ -55,7 +55,7 @@
                 <img src="images/finland.png" height="76px" class="finland">
                 <h5>Finnland</h5>
             </div>
-            <div class="wrapper">
+            <div id="france" class="wrapper">
                 <img src="images/france.png" height="76px" class="france">
                 <h5>Frankreich</h5>
             </div>
@@ -71,7 +71,7 @@
                 <img src="images/ireland.png" height="76px" class="ireland">
                 <h5>Irland</h5>
             </div>
-            <div class="wrapper">
+            <div id="italy" class="wrapper">
                 <img src="images/italy.png" height="76px" class="italy">
                 <h5>Italien</h5>
             </div>
@@ -121,7 +121,7 @@
                 <img src="images/spain.png" height="76px" class="spain">
                 <h5>Spanien</h5>
             </div>
-            <div class="wrapper">
+            <div id="sweden" class="wrapper">
                 <img src="images/sweden.png" height="76px" class="sweden">
                 <h5>Schweden</h5>
             </div>
