--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -21,6 +21,9 @@ body {
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A05/MyPortfolio03.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 5</a>
 	<br>
 	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A06/eu.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 6</a>
+	<br>
+	<a href="https://skytecc.github.io/EIA_SoSe22/Aufgaben/A07/eu02.html" target="_blank" rel="noopener noreferrer"> Link zu Aufgabe 7</a>
+
 
 </body>
 </html>
