--- a/Aufgaben/A09/Drumpad02.html
+++ b/Aufgaben/A09/Drumpad02.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="drumPadscript02.ts" ></script>
+    <script src="drumPadscript02.js" ></script>
 </head>
 <body> 
     
