--- a/Aufgaben/A09/Drumpad02.html
+++ b/Aufgaben/A09/Drumpad02.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="drumPadscript02.js" ></script>
 </head>
 <body> 
@@ -24,7 +25,7 @@
 
 </div>
 
-<div class="playButton" > <img src="Images/play-button.png" alt="Playbutton"> </div>
+<span class="btn"> <i class="fas fa-stop"> </i> </span>
 
     
     
