--- a/Aufgaben/A09/Drumpad02.html
+++ b/Aufgaben/A09/Drumpad02.html
@@ -25,7 +25,10 @@
 
 </div>
 
-<span class="btn"> <i class="fas fa-stop"> </i> </span>
+    <i class="btn fas fa-play"></i>
+    <br>
+    <i class="rmxBtn fas fa-compact-disc"></i>
+
 
     
     
