--- a/Aufgaben/A09/Drumpad02.html
+++ b/Aufgaben/A09/Drumpad02.html
@@ -25,7 +25,8 @@
 
     <div class="icon">
 
-        <i class="btn fas fa-play"></i>
+        <i id="play" class="fas fa-play"></i>
+        <i id="stop" class="fas fa-stop hidden"></i>
         <i id="remix" class="rmxBtn fas fa-compact-disc"></i>
 
     
