Add style, html

--- a/Aufgaben/A10/App.html
+++ b/Aufgaben/A10/App.html
@@ -22,11 +22,13 @@
     </div>
     
     <ul id="appList">
-        
-        <li> <input type="checkbox" checked="checked" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
+        <li> <input type="text" id="myInput" placeholder="Add another task" </li> 
+        <li> <input type="checkbox" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
             <label for="todo">Get out of bed</label> </li> 
-        <li>Get better in University</li>
-        <li>Finishing Assignments</li>
+        <li><input type="checkbox" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
+            <label for="todo">Get better in University</label></li>
+        <li><input type="checkbox" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
+            <label for="todo">Finishing Assignments</label></li>
     </ul>
 
 
