--- a/Aufgaben/A10/App.html
+++ b/Aufgaben/A10/App.html
@@ -21,15 +21,17 @@
         <div class="totalnumber"></div>
     </div>
     
+    <div><input type="text" id="myInput" placeholder="Add another task" </div>
+    
     <ul id="appList">
-        <li> <input type="text" id="myInput" placeholder="Add another task" </li> 
-        <li> <input type="checkbox" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
-            <label for="todo">Get out of bed</label> </li> 
-        <li><input type="checkbox" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
+        <li> <input type="checkbox" name="todo" value="todo"> <span class="checkmark"></span>
+            <label for="todo"> Get out of bed</label> </li> 
+        <li><input type="checkbox" name="todo" value="todo"> <span class="checkmark"></span>
             <label for="todo">Get better in University</label></li>
-        <li><input type="checkbox" id="todo" name="todo" value="todo"> <span class="checkmark"></span>
+        <li><input type="checkbox" name="todo" value="todo"> <span class="checkmark"></span>
             <label for="todo">Finishing Assignments</label></li>
     </ul>
+
 
 
 
